small pgn update

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- LOGO -->
         <div>
-            <img src="https://raw.githubusercontent.com/MariyaSha/groceriesList/main/logo_black.png" alt="Task Reminder">
+            <img src="task-complete.png" alt="Task Reminder">
         </div>
 
         <!-- REMOVE ITEMS FORM -->
